--- a/static/style.css
+++ b/static/style.css
@@ -42,8 +42,9 @@ h2 {
 }
 
 .scenario-input textarea {
-    width: 97.5%;
-    height: 100px;
+    width: 100%;
+    box-sizing: border-box;
+    height: 130px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
